--- a/src/main/resources/lang/message_es_ES.properties
+++ b/src/main/resources/lang/message_es_ES.properties
@@ -76,3 +76,5 @@ stackdeobf.mojang.licenseheader.2=You may copy and use the mappings for developm
 stackdeobf.mojang.licenseheader.3=Microsoft makes no warranties, express or implied, with respect to the mappings provided here.
 stackdeobf.mojang.licenseheader.4=Use and modification of this document or the source code (in any form) of Minecraft: Java Edition is governed by
 stackdeobf.mojang.licenseheader.5=the Minecraft End User License Agreement available at https://account.mojang.com/documents/minecraft_eula.
+error-symlink=File system do not support symbol links
+symlink-file-exist=File has been existed while create symlink
