Refactor Enum Injections

--- a/src/main/resources/lang/message_zh_TW.properties
+++ b/src/main/resources/lang/message_zh_TW.properties
@@ -61,3 +61,10 @@ stackdeobf.mojang.licenseheader.4=Use and modification of this document or the s
 stackdeobf.mojang.licenseheader.5=the Minecraft End User License Agreement available at https://account.mojang.com/documents/minecraft_eula.
 error-symlink=File system do not support symbol links
 symlink-file-exist=File has been existed while create symlink
+registry.begin=Registering for Bukkit ...
+registry.biome=Registered {} new biomes
+registry.villager-profession=Registered {} new villager professions
+registry.environment=Registered {} new dimensions
+registry.entity-type=Registered {} new entity types
+registry.enchantment=Registered {} enchantments
+registry.potion=Registered {} new potion effect types
