Show more info about injected blocks and items

--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -80,6 +80,8 @@ error-symlink=File system do not support symbol links
 symlink-file-exist=File has been existed while create symlink
 registry.begin=Registering for Bukkit ...
 registry.biome=Registered {} new biomes
+registry.item=Registered {} new items
+registry.block=Registered {} new blocks
 registry.villager-profession=Registered {} new villager professions
 registry.environment=Registered {} new dimensions
 registry.entity-type=Registered {} new entity types
