--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -79,6 +79,8 @@ error-symlink=\u6587\u4EF6\u7CFB\u7EDF\u4E0D\u652F\u6301\u7B26\u53F7\u94FE\u63A5
 symlink-file-exist=\u521B\u5EFA\u7B26\u53F7\u94FE\u63A5 {} \u65F6\u6587\u4EF6\u5DF2\u5B58\u5728
 registry.begin=\u6B63\u5728\u5411 Bukkit \u6CE8\u518C ...
 registry.biome=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u751F\u7269\u7FA4\u7CFB
+registry.item=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u7269\u54C1
+registry.block=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u65B9\u5757
 registry.villager-profession=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u6751\u6C11\u804C\u4E1A
 registry.environment=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u4E16\u754C\u7C7B\u578B
 registry.entity-type=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u751F\u7269\u7C7B\u578B
