--- a/src/main/resources/lang/message_es_ES.properties
+++ b/src/main/resources/lang/message_es_ES.properties
@@ -9,7 +9,7 @@ banner.start.server.error=Hay un error al iniciar el servidor. Puedes pedir ayud
 eula=Tienes que aceptar el eula para poder iniciar el servidor. Escribe true para continuar.
 eula.text=Cambiando la configuraci\uFFFDn de abajo a true estar\uFFFDas aceptando el EULA ({0}).
 file.download.percentage=Descargando {0} - {1}%
-libraries.global.percentage=Porcentaje global >
+libraries.global.percentage=Porcentaje global > {0}
 update.check=Comprobando actualizaciones...
 update.stopcheck=Si no quieres comprobar actualizaciones, cambia check_update en banner-config/banner.yml a false
 update.latest=No se han encontrado actualizaciones, \uFFFDltima versi\uFFFDn: ({0}) versi\uFFFDn actual: ({1})
