--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -9,7 +9,7 @@ banner.start.server.error=\u670D\u52A1\u5668\u542F\u52A8\u65F6\u9047\u5230\u4E00
 eula=\u4F60\u9700\u8981\u540C\u610FEULA\u624D\u80FD\u7EE7\u7EED\u542F\u52A8\u670D\u52A1\u5668\u3002\u8F93\u5165\u201Ctrue\u201D\u540C\u610F
 eula.text=\u5C06\u4E0B\u9762\u7684\u503C\u6539\u4E3A\u201Ctrue\u201D\u5373\u4EE3\u8868\u4F60\u540C\u610FEULA({0})
 file.download.percentage=\u4E0B\u8F7D {0} - {1}%
-libraries.global.percentage=\u603B\u8FDB\u5EA6 >
+libraries.global.percentage=\u603B\u8FDB\u5EA6 > {0}
 update.check=\u68C0\u67E5\u66F4\u65B0\u4E2D...
 update.stopcheck=\u5982\u679C\u4E0D\u60F3\u542F\u7528\u66F4\u65B0\u68C0\u67E5\uFF0C\u5728banner-config/banner.yml\u4E2D\u8BBE\u7F6E\u201Ccheck_update\u201D\u4E3A\u201Cfalse\u201D
 update.latest=\u672A\u53D1\u73B0\u66F4\u65B0\u3002\u6700\u65B0\u7248\u672C\uFF1A({0})\uFF0C\u5F53\u524D\u7248\u672C\uFF1A({1})
