--- a/src/main/resources/lang/message_en_US.properties
+++ b/src/main/resources/lang/message_en_US.properties
@@ -1,4 +1,5 @@
 libraries.checking.start=Checking libraries, please wait...
+libraries.downloadsource=DownloadSource: {0}
 libraries.check.end=All libraries are nice :) !
 file.download.nook=The download of {0} failed :(
 file.download.nook.md5=The download of {0} failed because the MD5 of this file is {1} while it should be {2}. The file got deleted for security reasons.
