--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -1,4 +1,5 @@
 libraries.checking.start=\u68C0\u67E5\u5E93\u6587\u4EF6\u4E2D\uFF0C\u8BF7\u7A0D\u7B49...
+libraries.downloadsource=下载源: {0}
 libraries.check.end=\u5E93\u6587\u4EF6\u68C0\u67E5\u5B8C\u6210\uFF0C\u672A\u53D1\u73B0\u95EE\u9898 :)
 file.download.nook=\u4E0B\u8F7D\u6587\u4EF6 {0} \u5931\u8D25 :(
 file.download.nook.md5={0} \u4E0B\u8F7D\u5931\u8D25\uFF0C\u56E0\u4E3A\u6B64\u6587\u4EF6\u7684MD5\u662F {1}\uFF0C\u800C\u5B83\u5E94\u8BE5\u662F {2}\u3002 \u51FA\u4E8E\u5B89\u5168\u539F\u56E0\uFF0C\u8BE5\u6587\u4EF6\u5DF2\u88AB\u5220\u9664\u3002
