Forgot to move info in LibraryLoader to i18n

--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -36,6 +36,7 @@ pluginscommand.reloaderror=\u00A7cAn error occurred while reloading {0}!
 load.libraries=Loading libraries, please wait...
 server.region.prepare=Preparing start region for dimension {}
 spigot.lib.loading=[{}] Loading {} libraries... please wait
+spigot.lib.loading.extra=[{}] Loading {} extra libraries... please wait
 spigot.lib.found=[{}] Found libraries {}
 spigot.lib.loaded=[{}] Loaded libraries {}
 banner.event_handler.register=Registering Banner Event Dispatchers...
