--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -35,6 +35,7 @@ pluginscommand.unloaderror=\u00A7c\u5378\u8F7D {0} \u65F6\u53D1\u751F\u9519\u8BE
 load.libraries=\u6B63\u5728\u52A0\u8F7D\u652F\u6301\u5E93\u6587\u4EF6\uFF0C\u8BF7\u7B49\u5F85...
 server.region.prepare=\u6B63\u5728\u4E3A\u7EF4\u5EA6\u51C6\u5907\u51FA\u751F\u70B9\u533A\u57DF {}
 spigot.lib.loading=[{}] \u52A0\u8F7D {} \u5E93\u6587\u4EF6\u4E2D... \u8BF7\u7B49\u5F85
+spigot.lib.loading.extra=[{}] \u52a0\u8f7d {} \u4e2a\u989d\u5916\u5e93\u6587\u4ef6\u4e2d... \u8bf7\u7b49\u5f85
 spigot.lib.found=[{}] \u627E\u5230\u5E93\u6587\u4EF6 {}
 spigot.lib.loaded=[{}] \u5DF2\u52A0\u8F7D\u5E93\u6587\u4EF6 {}
 banner.event_handler.register=\u6B63\u5728\u6CE8\u518CBanner\u4E8B\u4EF6\u4F20\u9012\u5668...
