--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -10,7 +10,7 @@ banner.start.server.error=An error occurs with the server start. You can ask for
 eula=You need to accept the eula to launch your server. Type true to continue.
 eula.text=By changing the setting below to true you are indicating your agreement to our EULA (%s).
 file.download.percentage=Downloading %s - %s%
-libraries.global.percentage=Global percentage %s - %s%
+libraries.global.percentage=Global percentage > %s
 update.check=Update in check...
 update.stopcheck=If you don't want to enable update check, set check_update in banner-config/banner.yml to false
 update.latest=No update found, latest version: (%s) current version: (%s)
