--- a/src/main/resources/lang/message_es_ES.properties
+++ b/src/main/resources/lang/message_es_ES.properties
@@ -9,7 +9,7 @@ banner.start.server.error=Hay un error al iniciar el servidor. Puedes pedir ayud
 eula=Tienes que aceptar el eula para poder iniciar el servidor. Escribe true para continuar.
 eula.text=Cambiando la configuraci\uFFFDn de abajo a true estar\uFFFDas aceptando el EULA (%s).
 file.download.percentage=Descargando %s - %s%
-libraries.global.percentage=Porcentaje global %s - %s%
+libraries.global.percentage=Porcentaje global > %s
 update.check=Comprobando actualizaciones...
 update.stopcheck=Si no quieres comprobar actualizaciones, cambia check_update en banner-config/banner.yml a false
 update.latest=No se han encontrado actualizaciones, \uFFFDltima versi\uFFFDn: (%s) versi\uFFFDn actual: (%s)
