--- a/src/main/resources/lang/message_zh_TW.properties
+++ b/src/main/resources/lang/message_zh_TW.properties
@@ -9,7 +9,7 @@ banner.start.server.error=\u670D\u52D9\u5668\u555F\u52D5\u6642\u9047\u5230\u4E00
 eula=\u4F60\u9700\u8981\u540C\u610FEULA\u624D\u80FD\u7E7C\u7E8C\u555F\u52D5\u670D\u52D9\u5668\u3002\u8F38\u5165\u201Ctrue\u201D\u540C\u610F
 eula.text=\u5C07\u4E0B\u9762\u7684\u503C\u6539\u70BA\u201Ctrue\u201D\u5373\u4EE3\u8868\u4F60\u540C\u610FEULA(%s)
 file.download.percentage=\u4E0B\u8F09 %s - %s%
-libraries.global.percentage=\u7E3D\u9032\u5EA6 %s - %s%
+libraries.global.percentage=\u7E3D\u9032\u5EA6 > %s
 update.check=\u6AA2\u67E5\u66F4\u65B0\u4E2D...
 update.stopcheck=\u5982\u679C\u4E0D\u60F3\u555F\u7528\u66F4\u65B0\u6AA2\u67E5\uFF0C\u5728banner-config/banner.yml\u4E2D\u8A2D\u7F6E\u201Ccheck_update\u201D\u70BA\u201Cfalse\u201D
 update.latest=\u672A\u767C\u73FE\u66F4\u65B0\u3002\u6700\u65B0\u7248\u672C\uFF1A(%s)\uFF0C\u7576\u524D\u7248\u672C\uFF1A(%s)
