Add items command

--- a/src/main/resources/lang/message.properties
+++ b/src/main/resources/lang/message.properties
@@ -33,6 +33,10 @@ pluginscommand.notunload=\u00A7cFailed to unload %s! (Check console for details.
 pluginscommand.nojar=\u00A7c%s's jar file is missing!
 pluginscommand.unloaderror=\u00A7cAn error occurred while unloading %s!
 pluginscommand.reloaderror=\u00A7cAn error occurred while reloading %s!
+itemscmd.description=Banner provides item editing commands
+error.notplayer=You must be a player to execute this command!
+itemscmd.mainhandEmpty=Your main hand is empty
+itemscmd.copy=Click to copy to clipboard
 load.libraries=Loading libraries, please wait...
 server.region.prepare=Preparing start region for dimension {}
 spigot.lib.loading=[{}] Loading {} libraries... please wait
