--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -84,3 +84,64 @@ registry.environment=Registered {} new dimensions
 registry.entity-type=Registered {} new entity types
 registry.enchantment=Registered {} enchantments
 registry.potion=Registered {} new potion effect types
+advancement.forgot=Forgot about advancement {}
+advancement.remove.told=Told to remove advancement {} but I don't know what that is
+advancement.list=Loaded {} advancements
+server.recipe.loaded=Loaded {} recipes
+world.preparingSpawn=Preparing spawn area: {}%
+world.time.elapsed=Time elapsed: {} ms
+networksystem.1=Using epoll channel type
+networksystem.2=Using default channel type
+spigotconfig.1=C'est le fichier de configuration principal de Spigot.
+spigotconfig.2=Comme vous pouvez le voir, il y en a des tonnes \u00E0 configurer. Certaines options peuvent avoir un impact sur la gameplay, alors utilisez
+spigotconfig.3=avec pr\u00E9caution, et assurez-vous que vous savez ce que chaque option fait avant la configuration.
+spigotconfig.4=Pour une r\u00E9f\u00E9rence pour toute variable \u00E0 l'int\u00E9rieur de ce fichier, consultez le wiki Spigot \u00E0
+spigotconfig.5=Si vous avez besoin d'aide pour la configuration ou si vous avez des questions concernant Spigot,
+spigotconfig.6=rejoignez-nous sur l'IRC ou laissez-nous un message sur nos forums.
+spigotconfig.7=Impossible de charger spigot.yml, veuillez corriger vos erreurs de syntaxe
+spigotconfig.8=Utilise {0} threads pour les E/S bas\u00E9es sur Netty
+spigotconfig.9=Ignorer les stats.forced-stats inexistants
+spigotconfig.10=Ignorer stats.forced-stats invalides
+spigotconfig.12=La journalisation de d\u00E9bogage est activ\u00E9e
+spigotconfig.13=La journalisation de d\u00E9bogage est d\u00E9sactiv\u00E9e
+spigotconfig.14=Configuration obsol\u00E8te, d\u00E9sactivation du support de BungeeCord !
+spigotconfig.15=Le serveur red\u00E9marre
+spigotconfig.16=Vous n'\u00EAtes pas dans la liste blanche de ce serveur !
+spigotconfig.17=Commande inconnue. Tapez "/help" pour obtenir de l'aide.
+spigotconfig.18=Le serveur est plein !
+spigotconfig.19=Client obsol\u00E8te ! Veuillez utiliser la {0}
+spigotconfig.20=Serveur obsol\u00E8te ! Je suis toujours en {0}
+spigotconfig.21=Ne peux pas sauvegarder
+spigotconfig.22=Erreur lors de l'appel
+spigotworldconfig.1=-------- Param\u00E8tres du monde pour [
+spigotworldconfig.2=Zone d'activation pour l'entit\u00E9: Un
+spigotworldconfig.3=Taux de despawn des objets :
+spigotworldconfig.4=Distance d'apparition des cr\u00E9atures :
+spigotworldconfig.5=Distance de vision :
+spigotworldconfig.6=Rayon de fusion d'exp\u00E9rience :
+spigotworldconfig.7=Rayon de fusion des objets :
+spigotworldconfig.8=Modificateur de croissance:
+spigotworldconfig.9=Rayon du suivi des entit\u00E9s :
+server.chunk.saving=Saving chunks for level '{}'/{}
+server.chunk.saved=ThreadedAnvilChunkStorage ({}): All chunks are saved
+server.dimension.saved=ThreadedAnvilChunkStorage: All dimensions are saved
+server.stopping=Stopping server
+server.saving.player=Saving players
+server.saving.world=Saving worlds
+server.hold.ckp=Can't keep up! Is the server overloaded? Running {}ms or {} ticks behind
+server.key.pair=Generating keypair
+mc.server.starting=Starting minecraft server version {}
+mc.server.properties=Loading properties
+mc.server.game_type=Default game type: {}
+mc.server.start_on=Starting Minecraft server on {}:{}
+server.start.done=Done ({})! For help, type "help" or "?"
+server.warn.offline=**** SERVER IS RUNNING IN OFFLINE/INSECURE MODE!
+server.warn.offline.0=The server will make no attempt to authenticate usernames. Beware.
+server.warn.offline.1=While this makes the game possible to play without internet access, it also opens up the ability for hackers to connect with any username they choose.
+server.warn.offline.2=To change this, set "online-mode" to "true" in the server.properties file.
+server.level.prepare=Preparing level "{}"
+bukkit.version.servername=This server is running
+bukkit.version.version=  version
+bukkit.version.apiversion= (Implementing API version
+bukkit.plugin.initializing=initializing
+bukkit.plugin.ifUpToDate=(Is it up to date?)
