--- a/src/main/resources/lang/message_zh_CN.properties
+++ b/src/main/resources/lang/message_zh_CN.properties
@@ -1,5 +1,5 @@
 libraries.checking.start=\u68C0\u67E5\u5E93\u6587\u4EF6\u4E2D\uFF0C\u8BF7\u7A0D\u7B49...
-libraries.downloadsource=下载源: %s
+libraries.downloadsource=\u00E4\u00B8\u008B\u00E8\u00BD\u00BD\u00E6\u00BA\u0090: %s
 libraries.check.end=\u5E93\u6587\u4EF6\u68C0\u67E5\u5B8C\u6210\uFF0C\u672A\u53D1\u73B0\u95EE\u9898 :)
 file.download.nook=\u4E0B\u8F7D\u6587\u4EF6 %s \u5931\u8D25 :(
 file.download.nook.md5=%s \u4E0B\u8F7D\u5931\u8D25\uFF0C\u56E0\u4E3A\u6B64\u6587\u4EF6\u7684MD5\u662F %s\uFF0C\u800C\u5B83\u5E94\u8BE5\u662F %s\u3002 \u51FA\u4E8E\u5B89\u5168\u539F\u56E0\uFF0C\u8BE5\u6587\u4EF6\u5DF2\u88AB\u5220\u9664\u3002
@@ -35,7 +35,7 @@ pluginscommand.unloaderror=\u00A7c\u5378\u8F7D %s \u65F6\u53D1\u751F\u9519\u8BEF
 load.libraries=\u6B63\u5728\u52A0\u8F7D\u652F\u6301\u5E93\u6587\u4EF6\uFF0C\u8BF7\u7B49\u5F85...
 server.region.prepare=\u6B63\u5728\u4E3A\u7EF4\u5EA6\u51C6\u5907\u51FA\u751F\u70B9\u533A\u57DF {}
 spigot.lib.loading=[{}] \u52A0\u8F7D {} \u5E93\u6587\u4EF6\u4E2D... \u8BF7\u7B49\u5F85
-spigot.lib.loading.extra=[{}] \u52a0\u8f7d {} \u4e2a\u989d\u5916\u5e93\u6587\u4ef6\u4e2d... \u8bf7\u7b49\u5f85
+spigot.lib.loading.extra=[{}] \u52A0\u8F7D {} \u4E2A\u989D\u5916\u5E93\u6587\u4EF6\u4E2D... \u8BF7\u7B49\u5F85
 spigot.lib.found=[{}] \u627E\u5230\u5E93\u6587\u4EF6 {}
 spigot.lib.loaded=[{}] \u5DF2\u52A0\u8F7D\u5E93\u6587\u4EF6 {}
 banner.event_handler.register=\u6B63\u5728\u6CE8\u518CBanner\u4E8B\u4EF6\u4F20\u9012\u5668...
@@ -88,3 +88,65 @@ registry.environment=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u4E16\u754C\u7C7B\
 registry.entity-type=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u751F\u7269\u7C7B\u578B
 registry.enchantment=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u9644\u9B54
 registry.potion=\u6CE8\u518C\u4E86 {} \u4E2A\u65B0\u7684\u836F\u6C34\u6548\u679C
+advancement.forgot=\u9057\u5FD8\u76F8\u5173\u8FDB\u5EA6 {}
+advancement.remove.told=\u544A\u77E5\u53BB\u79FB\u9664\u6210\u5C31 {} \u4F46\u6211\u5E76\u4E0D\u6E05\u695A\u600E\u4E48\u505A
+advancement.list=\u5DF2\u52A0\u8F7D {} \u8FDB\u5EA6
+server.recipe.loaded=\u5DF2\u52A0\u8F7D {} \u914D\u65B9
+world.preparingSpawn=\u51C6\u5907\u751F\u6210\u533A\u57DF: {}%
+world.time.elapsed=\u8017\u65F6: {}ms
+networksystem.1=\u4F7F\u7528epoll\u9891\u9053\u7C7B\u578B
+networksystem.2=\u4F7F\u7528\u9ED8\u8BA4\u9891\u9053\u7C7B\u578B
+spigotconfig.1=\u8FD9\u662FSpigot\u7684\u4E3B\u914D\u7F6E\u6587\u4EF6
+spigotconfig.2=\u6709\u5F88\u591A\u9879\u76EE\u53EF\u914D\u7F6E\uFF0C\u5176\u4E2D\u67D0\u4E9B\u9879\u76EE\u4F1A\u5F71\u54CD\u6E38\u620F\u4F53\u9A8C\uFF0C\u66F4\u6539\u65F6\u5E94\u591A\u52A0\u6CE8\u610F\u3002
+spigotconfig.3=\u8BF7\u786E\u4FDD\u5728\u66F4\u6539\u6BCF\u4E2A\u914D\u7F6E\u9879\u4E4B\u524D\u90FD\u77E5\u9053\u8FD9\u4E2A\u914D\u7F6E\u9879\u63A7\u5236\u4EC0\u4E48\u3002
+spigotconfig.4=\u6B64\u914D\u7F6E\u6587\u4EF6\u4E2D\u6BCF\u4E2A\u914D\u7F6E\u9879\u7684\u7528\u9014\u53C2\u8003Spigot wiki\u4E8E
+spigotconfig.5=\u5982\u679C\u9700\u8981\u5173\u4E8E\u914D\u7F6E\u6587\u4EF6\u7684\u5E2E\u52A9\u6216\u6709\u4EFB\u4F55\u5173\u4E8ESpigot\u7684\u95EE\u9898\uFF0C
+spigotconfig.6=\u8BF7\u52A0\u5165Spigot\u7684IRC\u6216\u5728Spigot\u8BBA\u575B\u53D1\u5E16
+spigotconfig.7=\u65E0\u6CD5\u52A0\u8F7Dspigot.yml\uFF0C\u8BF7\u66F4\u6B63\u914D\u7F6E\u6587\u4EF6\u7684\u8BED\u6CD5\u9519\u8BEF
+spigotconfig.8=\u4F7F\u7528 {0} \u7EBF\u7A0B\u7684\u57FA\u4E8ENetty\u7684IO
+spigotconfig.9=\u5FFD\u7565\u672A\u51FA\u73B0\u7684\u7EDF\u8BA1\u3002forced-stats
+spigotconfig.10=\u5FFD\u7565\u65E0\u6548\u7EDF\u8BA1\u3002forced-stats
+spigotconfig.11=\u670D\u52A1\u5668ping\u73A9\u5BB6\u6837\u672C\u6570:
+spigotconfig.12=\u8C03\u8BD5\u8F93\u51FA\u542F\u7528
+spigotconfig.13=\u8C03\u8BD5\u8F93\u51FA\u7981\u7528
+spigotconfig.14=\u914D\u7F6E\u6587\u4EF6\u8FC7\u671F\uFF01\u7981\u7528BungeeCord\u652F\u6301
+spigotconfig.15=\u670D\u52A1\u5668\u91CD\u542F\u4E2D\uFF01
+spigotconfig.16=\u4F60\u4E0D\u5728\u670D\u52A1\u5668\u767D\u540D\u5355\u4E2D\uFF01
+spigotconfig.17=\u672A\u77E5\u6307\u4EE4\u3002\u8F93\u5165\u201D/help\u201C\u67E5\u770B\u5E2E\u52A9
+spigotconfig.18=\u670D\u52A1\u5668\u7206\u6EE1\uFF01
+spigotconfig.19=\u5BA2\u6237\u7AEF\u7248\u672C\u8FC7\u4F4E\uFF01\u8BF7\u4F7F\u7528 {0}
+spigotconfig.20=\u5BA2\u6237\u7AEF\u7248\u672C\u8FC7\u9AD8\uFF01\u670D\u52A1\u5668\u7248\u672C\u4E3A {0}
+spigotconfig.21=\u65E0\u6CD5\u4FDD\u5B58
+spigotconfig.22=\u51FA\u73B0\u9519\u8BEF\u4E8E\u8C03\u7528
+spigotworldconfig.1=-------- \u4E16\u754C\u8BBE\u7F6E\u5173\u4E8E [
+spigotworldconfig.2=\u5B9E\u4F53\u6FC0\u6D3B\u8303\u56F4:
+spigotworldconfig.3=\u7269\u54C1\u81EA\u7136\u6D88\u5931\u65F6\u95F4:
+spigotworldconfig.4=\u751F\u7269\u751F\u5B58\u8303\u56F4:
+spigotworldconfig.5=\u89C6\u8DDD:
+spigotworldconfig.6=\u7ECF\u9A8C\u7403\u5408\u5E76\u534A\u5F84:
+spigotworldconfig.7=\u7269\u54C1\u5408\u5E76\u534A\u5F84:
+spigotworldconfig.8=\u751F\u957F\u901F\u7387\u8C03\u8282:
+spigotworldconfig.9=\u5B9E\u4F53\u8DDF\u8E2A\u8303\u56F4:
+server.chunk.saving=\u6B63\u5728\u4E3A\u6240\u6709\u4E16\u754C\u4FDD\u5B58\u533A\u5757 '{}'/{}
+server.chunk.saved=\u7EBF\u7A0B\u533A\u5757\u5B58\u50A8\u5668 ({}): \u6240\u6709\u533A\u5757\u5DF2\u4FDD\u5B58
+server.dimension.saved=\u7EBF\u7A0B\u533A\u5757\u5B58\u50A8\u5668: \u6240\u6709\u7EF4\u5EA6\u5DF2\u4FDD\u5B58
+server.stopping=\u505C\u6B62\u670D\u52A1\u5668\u4E2D
+server.saving.player=\u4FDD\u5B58\u73A9\u5BB6\u6570\u636E\u4E2D
+server.saving.world=\u4FDD\u5B58\u4E16\u754C\u5B58\u6863\u4E2D
+server.hold.ckp=\u670D\u52A1\u5668\u5361\u987F! \u670D\u52A1\u5668\u662F\u5426\u8FC7\u8F7D? \u8FD0\u884C {}ms \u6216 {} ticks
+server.key.pair=\u751F\u6210\u5BC6\u94A5\u5BF9
+mc.server.starting=\u5F00\u59CB\u542F\u52A8MC\u7248\u672C {}
+mc.server.properties=\u52A0\u8F7Dproperties\u6587\u4EF6
+mc.server.game_type=\u9ED8\u8BA4\u6E38\u620F\u6A21\u5F0F: {}
+mc.server.start_on=\u542F\u52A8MC\u670D\u52A1\u5668\u4E8E\u7AEF\u53E3 {}:{}
+server.start.done=\u52A0\u8F7D\u5B8C\u6210 ({})\uFF01\u5982\u9700\u5E2E\u52A9\uFF0C\u8BF7\u952E\u5165 "help" \u6216 "?"
+server.warn.offline=**** \u670D\u52A1\u5668\u52A0\u8F7D\u5728 \u79BB\u7EBF/\u65E0\u4FDD\u969C\u7684\u6A21\u5F0F!
+server.warn.offline.0=\u5F53\u5FC3\uFF01\u670D\u52A1\u5668\u4E0D\u4F1A\u5C1D\u8BD5\u9A8C\u8BC1\u7528\u6237\u540D.
+server.warn.offline.1=\u867D\u7136\u8FD9\u4F7F\u5F97\u6E38\u620F\u53EF\u4EE5\u5728\u6CA1\u6709\u4E92\u8054\u7F51\u9A8C\u8BC1\u7684\u60C5\u51B5\u4E0B\u6E38\u73A9\uFF0C\u4F46\u5B83\u4E5F\u5E26\u6765\u4E86\u98CE\u9669.
+server.warn.offline.2=\u8981\u66F4\u6539\u6B64\u8BBE\u7F6E\uFF0C\u8BF7\u5728server.properties\u6587\u4EF6\u4E2D\u5C06\u201Conline-mode\u201D\u8BBE\u7F6E\u4E3A\u201Ctrue\u201D\u3002
+server.level.prepare=\u6B63\u5728\u51C6\u5907\u4E16\u754C "{}"
+bukkit.version.servername=\u8FD9\u4E2A\u670D\u52A1\u5668\u6838\u5FC3\u4E3A:
+bukkit.version.version= \u7248\u672C:
+bukkit.version.apiversion= (\u5B9E\u884C\u4E2D\u7684bukkitAPI\u7248\u672C :
+bukkit.plugin.initializing=\u52A0\u8F7D\u4E2D
+bukkit.plugin.ifUpToDate=(\u662F\u5426\u66F4\u65B0?)
