--- a/src/main/resources/lang/message_zh_TW.properties
+++ b/src/main/resources/lang/message_zh_TW.properties
@@ -70,3 +70,65 @@ registry.environment=Registered {} new dimensions
 registry.entity-type=Registered {} new entity types
 registry.enchantment=Registered {} enchantments
 registry.potion=Registered {} new potion effect types
+advancement.forgot=Forgot about advancement {}
+advancement.remove.told=Told to remove advancement {} but I don't know what that is
+advancement.list=Loaded {} advancements
+server.recipe.loaded=Loaded {} recipes
+world.preparingSpawn=Preparing spawn area: {}%
+world.time.elapsed=Time elapsed: {} ms
+networksystem.1=Using epoll channel type
+networksystem.2=Using default channel type
+spigotconfig.1=This is the main configuration file for Spigot.
+spigotconfig.2=As you can see, there's tons to configure. Some options may impact gameplay, so use
+spigotconfig.3=with caution, and make sure you know what each option does before configuring.
+spigotconfig.4=For a reference for any variable inside this file, check out the Spigot wiki at
+spigotconfig.5=If you need help with the configuration or have any questions related to Spigot,
+spigotconfig.6=join us at the IRC or drop by our forums and leave a post.
+spigotconfig.7=Could not load spigot.yml, please correct your syntax errors
+spigotconfig.8=Using {0} threads for Netty based IO
+spigotconfig.9=Ignoring non existent stats.forced-stats
+spigotconfig.10=Ignoring invalid stats.forced-stats
+spigotconfig.11=Server Ping Player Sample Count:
+spigotconfig.12=Debug logging is enabled
+spigotconfig.13=Debug logging is disabled
+spigotconfig.14=Oudated config, disabling BungeeCord support!
+spigotconfig.15=Server is restarting
+spigotconfig.16=You are not whitelisted on this server!
+spigotconfig.17=Unknown command. Type "/help" for help.
+spigotconfig.18=The server is full!
+spigotconfig.19=Outdated client! Please use {0}
+spigotconfig.20=Outdated server! I'm still on {0}
+spigotconfig.21=Could not save
+spigotconfig.22=Error invoking
+spigotworldconfig.1=-------- World Settings For [
+spigotworldconfig.2=Entity Activation Range: An 
+spigotworldconfig.3=Item Despawn Rate:
+spigotworldconfig.4=Mob Spawn Range:
+spigotworldconfig.5=View Distance:
+spigotworldconfig.6=Experience Merge Radius:
+spigotworldconfig.7=Item Merge Radius:
+spigotworldconfig.8=Growth Modifier:
+spigotworldconfig.9=Entity Tracking Range:
+server.chunk.saving=Saving chunks for level '{}'/{}
+server.chunk.saved=ThreadedAnvilChunkStorage ({}): All chunks are saved
+server.dimension.saved=ThreadedAnvilChunkStorage: All dimensions are saved
+server.stopping=Stopping server
+server.saving.player=Saving players
+server.saving.world=Saving worlds
+server.hold.ckp=Can't keep up! Is the server overloaded? Running {}ms or {} ticks behind
+server.key.pair=Generating keypair
+mc.server.starting=Starting minecraft server version {}
+mc.server.properties=Loading properties
+mc.server.game_type=Default game type: {}
+mc.server.start_on=Starting Minecraft server on {}:{}
+server.start.done=Done ({})! For help, type "help" or "?"
+server.warn.offline=**** SERVER IS RUNNING IN OFFLINE/INSECURE MODE!
+server.warn.offline.0=The server will make no attempt to authenticate usernames. Beware.
+server.warn.offline.1=While this makes the game possible to play without internet access, it also opens up the ability for hackers to connect with any username they choose.
+server.warn.offline.2=To change this, set "online-mode" to "true" in the server.properties file.
+server.level.prepare=Preparing level "{}"
+bukkit.version.servername=This server is running
+bukkit.version.version=  version
+bukkit.version.apiversion= (Implementing API version
+bukkit.plugin.initializing=initializing
+bukkit.plugin.ifUpToDate=(Is it up to date?)
