Fix banner logo and info

--- a/src/main/resources/lang/message_es_ES.properties
+++ b/src/main/resources/lang/message_es_ES.properties
@@ -4,7 +4,7 @@ file.download.nook=La descarga de %s ha fallado :(
 file.download.nook.md5=La descarga de %s ha fallado porque el MD5 de este archivo es %s y deber\uFFFDa ser %s. El archivo se ha eliminado por medidas de seguridad.
 download.file=Descargando archivo %s con tama\uFFFDo %s
 download.file.ok=Descarga de %s finalizada
-banner.launch.welcomemessage=Bienvenido a Banner 1.20.1! - Grupo de desarrollo Mohist
+banner.launch.welcomemessage=Bienvenido a Banner 1.20.1
 banner.start.server.error=Hay un error al iniciar el servidor. Puedes pedir ayuda en el Discord o Github de Mohist.
 eula=Tienes que aceptar el eula para poder iniciar el servidor. Escribe true para continuar.
 eula.text=Cambiando la configuraci\uFFFDn de abajo a true estar\uFFFDas aceptando el EULA (%s).
