--- a/src/main/resources/lang/message_fr_FR.properties
+++ b/src/main/resources/lang/message_fr_FR.properties
@@ -4,7 +4,7 @@ file.download.nook=Le t\u00E9l\u00E9chargement de %s a \u00E9chou\u00E9 :(
 file.download.nook.md5=Le t\u00E9l\u00E9chargement de %s a \u00E9chou\u00E9 car le MD5 de ce fichier est %s alors qu''il devrait \u00EAtre %s. Le fichier a \u00E9t\u00E9 supprim\u00E9 pour des raisons de s\u00E9curit\u00E9.
 download.file=T\u00E9l\u00E9chargement du fichier %s avec une taille de %s
 download.file.ok=T\u00E9l\u00E9chargement du fichier %s termin\u00E9 !
-banner.launch.welcomemessage=Bienvenue sur Banner 1.20.1 ! - Equipe de d\u00E9veloppement de Mohist
+banner.launch.welcomemessage=Bienvenue sur Banner 1.20.1
 banner.start.server.error=Une erreur est survenue lors du d\u00E9marrage du serveur. Tu peux de demander de l'aide au support de Mohist sur Discord ou GitHub.
 eula=Tu dois accepter l'eula pour lancer ton serveur. Tape true dans la console pour continuer.
 eula.text=En changeant ce param\u00E8tre sur true, vous acceptez notre EULA (%s).
